fixed margin on mobile view on about and portfolio page

--- a/portfolio/portfolio.scss
+++ b/portfolio/portfolio.scss
@@ -6,6 +6,9 @@
   .inner {
     width: 70%;
     margin-top: 6.5rem;
+    @media (max-width: 850px) {
+      margin-top: 4rem!important;
+    }
     .text-container-top {
       display: flex;
       align-items: end;
